--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
+    "react-to-print": "^3.2.0",
+    "redux-persist": "^6.0.0",
     "redux-undo": "^1.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
